Amplify Store for session and local storage and Intl for Currency Pipe
Amplify Store for session and local storage and Intl for Currency Pipe

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>PrimeNG - Modena</title>
+  <title>Cheetah Pricing</title>
 
   <!-- build:css assets/bundle.css -->
   <link rel="stylesheet" type="text/css" href="../node_modules/primeui/primeui-ng-all.min.css">
@@ -42,8 +42,14 @@
   <!-- Non-module JS libs -->
   <script src="../node_modules/reflect-metadata/Reflect.js"></script>
   <script src="../node_modules/primeui/primeui-ng-all.min.js"></script>
+  <script src="../node_modules/intl/dist/Intl.min.js"></script>
+  <script src="../node_modules/intl/locale-data/jsonp/en.js"></script>
   <script src="/assets/layout/js/perfect-scrollbar.js"></script>
   <script src="/assets/layout/js/layout.js"></script>
+
+  <script src="/assets/amplify-1.1.2/amplify.js"></script>
+  <script src="/assets/amplify-1.1.2/individual/amplify.core.js"></script>
+  <script src="/assets/amplify-1.1.2/individual/amplify.store.js"></script>
 
   <!-- Polyfill(s) for older browsers -->
   <script src="../node_modules/core-js/client/shim.min.js"></script>
