--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
   <!-- build:css assets/bundle.css -->
   <link rel="stylesheet" type="text/css" href="../node_modules/primeui/primeui-ng-all.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- app:css -->
   <link rel="stylesheet" type="text/css" href="/assets/theme/theme.css">
   <link rel="stylesheet" type="text/css" href="/assets/layout/css/core-layout.css">
@@ -47,6 +48,7 @@
   <script src="../node_modules/intl/locale-data/jsonp/en.js"></script>
   <script src="/assets/layout/js/perfect-scrollbar.js"></script>
   <script src="/assets/layout/js/layout.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <script src="/assets/amplify-1.1.2/amplify.js"></script>
   <script src="/assets/amplify-1.1.2/individual/amplify.core.js"></script>
